# MonsterTeamBuildingProject

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6db97488bcbb_add_username_to_users.py  6feec7bbabef_add_slots_list_to_team.py  704d5dfe87d0_create_teams_and_slots.py  c9ed2ccc7534_create_users.py
backend/app/: main.py
backend/app/api/: auth.py  health.py
backend/app/auth/: cookies.py  deps.py  sessionauth.py
backend/app/database/: session.py
backend/app/database/models/: __init__.py  slot.py  team.py  user.py
frontend/: .gitignore  Dockerfile  vite.config.ts
