[project]
name = "monster-team-building-backend"
version = "0.1.0"
description = "FastAPI backend for real-time collaborative team builder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.0",

  # DB + migrations (recommended from day 1)
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",

  # Redis (cache + pubsub)
  "redis>=5.0",

  #tool for ci check
  "ruff>=0.5",

  #alembic for db migrations
  "alembic>=1.18.4",


  "psycopg2-binary==2.9.11"
]

[tool.uv]
# Optional: makes `uv sync` create a local venv in-container at /app/.venv
# uv will do this anyway; this section can be omitted.

[tool.ruff]
line-length = 100
target-version = "py312"